force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/PBS_AAAP_RLP_Attachments__c.object-meta.xml
<CustomObject>
    <label>RLP Attachments</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RLP Attachments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RLP Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>