force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/Other_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Attachment_Name__c</fullName>
    <label>Other Attachment Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>