force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/PBS_AAAP_Attachment_Type__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Attachment_Type__c</fullName>
    <label>Attachment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>