force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/PBS_AAAP_LEGACY_ATTACHMENT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEGACY_ATTACHMENT_NUMBER__c</fullName>
    <externalId>true</externalId>
    <label>PBS_AAAP_LEGACY_ATTACHMENT_NUMBER</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>