force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/PBS_AAAP_LEGACY_SFO_ID__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_LEGACY_SFO_ID__c</fullName>
    <label>PBS_AAAP_LEGACY_SFO_ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>