force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/PBS_AAAP_RLP__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_RLP__c</fullName>
    <label>RLP</label>
    <referenceTo>PBS_AAAP_RLP__c</referenceTo>
    <relationshipLabel>RLP Attachments</relationshipLabel>
    <relationshipName>RLP_Attachments1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>