force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/PBS_AAAP_Title__c.field-meta.xml
<CustomField>
    <fullName>PBS_AAAP_Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>