force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/fields/RLP_Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>RLP_Attachment_Name__c</fullName>
    <label>RLP Attachment Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal to Lease Space (Form 1364C)</fullName>
            </value>
            <value>
                <fullName>Lessor&apos;s Annual Cost Statement (Form 1217)</fullName>
            </value>
            <value>
                <fullName>Solicitation Provisions (Form 3516)</fullName>
            </value>
            <value>
                <fullName>General Clauses (Form 3517B)</fullName>
            </value>
            <value>
                <fullName>Representations and Certifications (Form 3518)</fullName>
            </value>
            <value>
                <fullName>Solicitation Attachment #1 - Rate Structure</fullName>
            </value>
            <value>
                <fullName>Solicitation Attachment #2 - AAAP Construction Schedule</fullName>
            </value>
            <value>
                <fullName>Solicitation Attachment #3 - Scope of Work for DID’s and Construction Schedule Tasks</fullName>
            </value>
            <value>
                <fullName>Solicitation Attachment #4 - Fire Protection and Life Safety Evaluation</fullName>
            </value>
            <value>
                <fullName>Other Attachment</fullName>
            </value>
            <value>
                <fullName>Request for Lease Proposal</fullName>
            </value>
            <value>
                <fullName>Lease Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>