force-app/main/default/objects/PBS_AAAP_RLP_Attachments__c/validationRules/RLP_Other_Attachment.validationRule-meta.xml
<ValidationRule>
    <fullName>RLP_Other_Attachment</fullName>
    <active>true</active>
    <description>If rlp attachment type is &quot;Other&quot; then Other field is mandatory.</description>
    <errorConditionFormula>ISPICKVAL(RLP_Attachment_Name__c , &apos;Other Attachment&apos; ) &amp;&amp; ISBLANK( Other_Attachment_Name__c)</errorConditionFormula>
    <errorDisplayField>Other_Attachment_Name__c</errorDisplayField>
    <errorMessage>Other Attachment Name is required.</errorMessage>
</ValidationRule>